--- a/.github/workflows/wearmewflow.yml
+++ b/.github/workflows/wearmewflow.yml
@@ -61,8 +61,8 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          git config --global user.email "your-email@example.com"
-          git config --global user.name "your-github-username"
+          git config --global user.email "jd.villegas@javerianacali.edu.co"
+          git config --global user.name "jvjav"
           git checkout --orphan gh-pages
           git --work-tree=./site add --all
           git --work-tree=./site commit -m "Deploy MkDocs site"
