--- a/.github/workflows/wearmewflow.yml
+++ b/.github/workflows/wearmewflow.yml
@@ -56,14 +56,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
       - name: Deploy to GitHub Pages
-        run: |
-          git config --global user.email "jd.villegas@javerianacali.edu.co"
-          git config --global user.name "jvjav"
-          git checkout --orphan gh-pages
-          git --work-tree=./site add --all
-          git --work-tree=./site commit -m "Deploy MkDocs site"
-          git push origin gh-pages --force
+        id: deployment
+        uses: actions/deploy-pages@v2
